--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ author: MikyBorder
 
 # 테마
 show_downloads: true
-logo: /assets/img/datarichard.png
+logo: /assets/img/MikyBorder.png
 theme: jekyll-theme-minimal
